Update service titles and salon description

--- a/index.html
+++ b/index.html
@@ -485,49 +485,94 @@
             <div class="services-grid">
                 <!-- ✂️ CUTS -->
                 <div class="service-card">
-                    <h3>✂️ Hair Cut</h3>
+                    <h3> Hair Cut</h3>
+                    <img src="https://tse1.explicit.bing.net/th/id/OIP.oBLfwWphUT8dOTUW8gAQ6gHaNK?rs=1&pid=ImgDetMain&o=7&rm=3" 
+                         alt="Hair Cut" 
+                         style="width: 100%; height: 450px; object-fit: cover; border-radius: 8px; pointer-events: none; user-select: none;" 
+                         oncontextmenu="return false" 
+                         draggable="false">
                     <p>Modern and classic haircuts tailored to your style</p>
                     <div class="price">₹100</div>
                 </div>
                 <div class="service-card">
-                    <h3>✂️ Shave</h3>
+                    <h3> Shave</h3>
+                    <img src="https://static.wixstatic.com/media/6fe58d_08cb0c1bfdf94a189a54258578f75e30~mv2.jpg/v1/fill/w_804,h_407,al_c,q_80,usm_0.66_1.00_0.01,enc_auto/6fe58d_08cb0c1bfdf94a189a54258578f75e30~mv2.jpg" 
+                         alt="Shave" 
+                         style="width: 100%; height: 450px; object-fit: cover; border-radius: 8px; pointer-events: none; user-select: none;" 
+                         oncontextmenu="return false" 
+                         draggable="false">
                     <p>Clean, professional traditional shave experience</p>
                     <div class="price">₹60</div>
                 </div>
                 <div class="service-card">
-                    <h3>✂️ Shape + Trim</h3>
+                    <h3>  Trim</h3>
+                    <img src="https://img.freepik.com/free-photo/anonymous-barber-trimming-beard-man_23-2147778850.jpg?w=740&t=st=1708039008~exp=1708039608~hmac=eb4fa3861a463b8380d14e634231ad14f7804e9f5b990310de07df2c74e5b939" 
+                         alt="Trim" 
+                         style="width: 100%; height: 450px; object-fit: cover; border-radius: 8px; pointer-events: none; user-select: none;" 
+                         oncontextmenu="return false" 
+                         draggable="false">
                     <p>Expert beard shaping and precision trimming</p>
                     <div class="price">₹60</div>
                 </div>
                 <div class="service-card">
-                    <h3>✂️ Hair Cut + Shape</h3>
+                    <h3> Hair Cut + Beard</h3>
+                    <img src="https://img.freepik.com/premium-photo/man-getting-his-hair-cut-barber-shop_662214-485751.jpg" 
+                         alt="Hair Cut + Shape" 
+                         style="width: 100%; height: 450px; object-fit: cover; border-radius: 8px; pointer-events: none; user-select: none;" 
+                         oncontextmenu="return false" 
+                         draggable="false">
                     <p>Complete grooming package for the modern man</p>
                     <div class="price">₹150</div>
                 </div>
                 <!-- 🎨 COLORING -->
                 <div class="service-card">
-                    <h3>🎨 Hair Cut + Shape + Colour</h3>
+                    <h3> Hair Cut + Beard + Colour</h3>
+                    <img src="https://as1.ftcdn.net/v2/jpg/04/55/17/14/1000_F_455171429_tbjJEhQvo7uiy3VaK9QaelCrP9Hv8356.jpg" 
+                         alt="Hair Cut + Shape + Colour" 
+                         style="width: 100%; height: 450px; object-fit: cover; border-radius: 8px; pointer-events: none; user-select: none;" 
+                         oncontextmenu="return false" 
+                         draggable="false">
                     <p>Full transformation with premium styling and color</p>
                     <div class="price">₹250</div>
                 </div>
                 <div class="service-card">
-                    <h3>🎨 Hair Colour</h3>
+                    <h3> Hair Colour</h3>
+                    <img src="https://static.wixstatic.com/media/4fda8e_9d232439c09947848069e1a65030f9d3~mv2.jpg/v1/fill/w_1000,h_1000,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/4fda8e_9d232439c09947848069e1a65030f9d3~mv2.jpg" 
+                         alt="Hair Colour" 
+                         style="width: 100%; height: 450px; object-fit: cover; border-radius: 8px; pointer-events: none; user-select: none;" 
+                         oncontextmenu="return false" 
+                         draggable="false">
                     <p>Professional hair coloring with quality products</p>
                     <div class="price">₹100</div>
                 </div>
                 <!-- 💆 SERVICES -->
                 <div class="service-card">
-                    <h3>💆 Oil Massage</h3>
+                    <h3> Oil Massage</h3>
+                    <img src="https://th.bing.com/th/id/R.197b8f50c496e5bf23e91c98051a5f6d?rik=DHf4DbVdtgr3gA&riu=http%3a%2f%2ftouchlifespa.com%2fimg-optimized%2fhead.webp&ehk=a9g8XIzd1UlIUZ%2fzWl68cPpiQwcFLekxH5lW1elAQzo%3d&risl=&pid=ImgRaw&r=0" 
+                         alt="Oil Massage" 
+                         style="width: 100%; height: 450px; object-fit: cover; border-radius: 8px; pointer-events: none; user-select: none;" 
+                         oncontextmenu="return false" 
+                         draggable="false">
                     <p>Relaxing scalp massage with nourishing oils</p>
                     <div class="price">₹70</div>
                 </div>
                 <div class="service-card">
-                    <h3>💆 Scrub</h3>
+                    <h3> Scrub</h3>
+                    <img src="https://img.freepik.com/premium-photo/man-receiving-face-massage-beauty-salon_1111209-67752.jpg" 
+                         alt="Scrub" 
+                         style="width: 100%; height: 450px; object-fit: cover; border-radius: 8px; pointer-events: none; user-select: none;" 
+                         oncontextmenu="return false" 
+                         draggable="false">
                     <p>Deep cleansing facial scrub for refreshed skin</p>
                     <div class="price">₹150</div>
                 </div>
                 <div class="service-card">
-                    <h3>💆 D-Tan</h3>
+                    <h3> D-Tan</h3>
+                    <img src="https://dandiesbarber.com/ws/media-library/4c801d7b2e984e0f8499dc179fcc65ff/mens-facial.jpg" 
+                         alt="D-Tan" 
+                         style="width: 100%; height: 450px; object-fit: cover; border-radius: 8px; pointer-events: none; user-select: none;" 
+                         oncontextmenu="return false" 
+                         draggable="false">
                     <p>Professional de-tanning treatment for even skin tone</p>
                     <div class="price">₹150</div>
                 </div>
@@ -540,7 +585,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <h2>About OMEGA Hair Saloon</h2>
-                    <p>Located in the heart of Nandyala at Deva Nagar Colony, OMEGA Hair Saloon has been serving the community with premium men's grooming services for over 10 years.</p>
+                    <p>Located in the heart of Nandyala at Deva Nagar Colony, OMEGA Hair Saloon has been serving the community with premium men's grooming services for over 15 years.</p>
                     <br>
                     <p>Founded by Balu, our salon combines traditional barbering techniques with modern styling trends. We pride ourselves on delivering exceptional service and ensuring every client leaves feeling confident and refreshed.</p>
                     <br>
