--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                          style="width: 100%; height: 450px; object-fit: cover; border-radius: 8px; pointer-events: none; user-select: none;" 
                          oncontextmenu="return false" 
                          draggable="false">
-                    <p>Modern and classic haircuts tailored to your style</p>
+                    <p>Modern and classic haircut</p>
                     <div class="price">₹100</div>
                 </div>
                 <div class="service-card">
@@ -501,7 +501,7 @@
                          style="width: 100%; height: 450px; object-fit: cover; border-radius: 8px; pointer-events: none; user-select: none;" 
                          oncontextmenu="return false" 
                          draggable="false">
-                    <p>Clean, professional traditional shave experience</p>
+                    <p>Clean, professional traditional shave </p>
                     <div class="price">₹60</div>
                 </div>
                 <div class="service-card">
@@ -511,24 +511,24 @@
                          style="width: 100%; height: 450px; object-fit: cover; border-radius: 8px; pointer-events: none; user-select: none;" 
                          oncontextmenu="return false" 
                          draggable="false">
-                    <p>Expert beard shaping and precision trimming</p>
+                    <p>Expert beard shaping </p>
                     <div class="price">₹60</div>
                 </div>
                 <div class="service-card">
                     <h3> Hair Cut + Beard</h3>
                     <img src="https://img.freepik.com/premium-photo/man-getting-his-hair-cut-barber-shop_662214-485751.jpg" 
-                         alt="Hair Cut + Shape" 
+                         alt="Hair Cut + Beard" 
                          style="width: 100%; height: 450px; object-fit: cover; border-radius: 8px; pointer-events: none; user-select: none;" 
                          oncontextmenu="return false" 
                          draggable="false">
-                    <p>Complete grooming package for the modern man</p>
+                    <p>Complete grooming pack for man</p>
                     <div class="price">₹150</div>
                 </div>
                 <!-- 🎨 COLORING -->
                 <div class="service-card">
                     <h3> Hair Cut + Beard + Colour</h3>
                     <img src="https://as1.ftcdn.net/v2/jpg/04/55/17/14/1000_F_455171429_tbjJEhQvo7uiy3VaK9QaelCrP9Hv8356.jpg" 
-                         alt="Hair Cut + Shape + Colour" 
+                         alt="Hair Cut + Beard + Colour" 
                          style="width: 100%; height: 450px; object-fit: cover; border-radius: 8px; pointer-events: none; user-select: none;" 
                          oncontextmenu="return false" 
                          draggable="false">
